# matam-ex3

./: .gitignore  CMakeLists.txt  base_event.cpp  base_event.h  custom_event.cpp  custom_event.h  date_wrap.cpp  date_wrap.h  festival.cpp  festival.h  one_time_event.h  pack.sh  recurring_event.h  schedule.cpp  schedule.h
dry/: dry.cpp  dry_test.cpp
hen_tests/partB/: closed_event_tests.cpp  custom_event_tests.cpp  festival_tests.cpp  general_tests.cpp  one_time_event_tests.cpp  open_event_tests.cpp  recurring_event_tests.cpp
hen_tests/partC/: schedule_tests.cpp
outputs_full/: events_out.txt  events_out_month.txt  events_out_verbose.txt
partA/: date.c  date_wrap.cpp  date_wrap.h  exceptions.cpp  exceptions.h  test_partA_full.cpp
partB/: base_event.cpp  base_event.h  closed_event.cpp  closed_event.h  custom_event.cpp  custom_event.h  event_container.cpp  event_container.h  festival.cpp  festival.h  one_time_event.cpp  one_time_event.h  open_event.cpp  open_event.h  recurring_event.cpp  recurring_event.h  shared_pointer.h  test_partB.cpp  test_partB_full.cpp  vector.h
partC/: schedule.cpp  schedule.h  test_partC_full.cpp
provided/: README.md  test_partA.cpp  test_partB.cpp  test_partC.cpp
provided2/: test_partA.cpp  test_partB.cpp  test_partC.cpp
provided2/testOutputs/partB/expected/: test1SegelProvided.txt  test2SegelProvided.txt
provided2/testOutputs/partC/expected/: testRegistrationAndUnRegistration.txt
tests/: test_partB_full.cpp  test_partC_full.cpp
